Vassiliev's part of FTVI

--- a/setup.tex
+++ b/setup.tex
@@ -150,6 +150,10 @@
 \usepackage{calc}
 
 
+% TABLES
+\usepackage{tabularray}
+
+
 % STATEMENT ENVIRONMENTS (theorem, definition, proof, etc.)
 
 \usepackage[amsmath, thmmarks]{ntheorem}
