Remove combinatorial integration of weight systems

--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -851,6 +851,8 @@ The part due to Vassiliev is the easy part.
 		Recalling that \(\mathcal{A}_{m} = \mathcal{D}_{m} / \ref{eq:co1T}, \ref{eq:co4T}\), we need to show that the map is well-defined with respect to those relations. Indeed \ref{eq:co1T} is in the kernel, as any singular knot with a \ref{eq:co1T} singular point resolves to a difference of two of the same knots when that singular point is resolved.
 
 		\ref{eq:co4T} is also in the kernel as it comes from a closed singular isotopy in the strata. When resolving such a closed isotopy, things always cancel out.
+
+		Make the argument in the dual case.
 	\end{mdframed}
 \end{proofof}
 
