Kontsevich integral chapter heavy edits

--- a/references.bib
+++ b/references.bib
@@ -167,11 +167,27 @@
 @article{vassiliev-invariants-and-the-hopf-algebra-of-chord-diagrams,
 	title = {Vassiliev invariants and the Hopf algebra of chord diagrams},
 	volume = {119},
-	DOI = {10.1017/S0305004100073965},
 	number = {1},
 	journal = {Mathematical Proceedings of the Cambridge Philosophical
 	           Society},
 	author = {Willerton, Simon},
 	year = {1996},
 	pages = {55–65},
+}
+
+@article{vassilievs-knot-invariants,
+	title = {Vassiliev’s knot invariants},
+	author = {Maxim Kontsevich},
+	volume = {16(2)},
+	pages = {137-150},
+	journal = {Advances in Soviet Mathematics},
+	year = {1993},
+}
+
+@online{the-kontsevich-integral,
+	title = {The Kontsevich integral},
+	author = {Sergei Chmutov and Sergei Duzhin},
+	year = {2005},
+	Eprint = {math/0501040},
+	Eprinttype = {arXiv},
 }
