--- a/setup.tex
+++ b/setup.tex
@@ -206,5 +206,6 @@
 
 % BIBLIOGRAPHY
 \emergencystretch=1em
-\usepackage[style=alphabetic]{biblatex}
+% TODO: Choose a bibstyle that makes titles rather than journal titles italicised.
+\usepackage[citestyle=alphabetic, bibstyle=alphabetic]{biblatex}
 \bibliography{references}
