--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -801,23 +801,13 @@ Again, this is not, a-priori, a well-defined operation, as the location of the c
 \label{sec:the-kontsevich-integral}
 % NOTE: Perhaps, "The fundamental theorem and the universal Vassiliev invariant"?
 
-\begin{definitions}
-	\begin{enumerate}
-		\item The \textbf{associated graded} algebra of a filtered algebra \(A\) is the algebra
-			\[\gr A = \bigoplus_{m = 0}^{\infty} A_{m} / A_{m + 1}.\]
-		\item There is a category of filtered algebras and filtration-respecting maps, and there is a category of graded algebras and grading-respecting maps. The \textbf{associated graded} map of a filtration-respecting map \(f: A \to B\) is the grading-respecting map \({\gr f : \gr A \to \gr B}\) defined by taking a representative \(a_{m}\) to \(f(a_{m})\) then projecting onto \(B_{m} / B_{m + 1}\),
-			\[\gr f: a_{m} + A_{m + 1} \mapsto f(a_{m}) + B_{m + 1}.\]
-		This makes \(\gr\) a functor between these two categories.
-		% TODO: Try to typeset the gr f: grA \to gr B inline
-		% TODO: Do I want to define (grading-), filtration-respecting maps? No. But should I? unsure.
-	\end{enumerate}
-\end{definitions}
+In Section \ref{sec:integration-and-the-fundamental-theorem}, we gave the fundamental theorem of Vassiliev invariants. The point of this theorem is that is establishes a particular relationship between the algebras of the previous two chapters, \(\mathcal{K}\) and \(\mathcal{A}\) (or equivalently, between \(\mathcal{W}\) and \(\mathcal{V}\)). But admittedly, in the form of Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants}, it's not a-priori obvious why this is the case. Here we give a restatement of that theorem that makes the relationship explicit.
 
-\begin{mdframed}
-	Part about one direction of the f.t. being easy. Talk about why the other isn't (also how in the dual case it makes it hard to define a map knots to chord diagrams).
-\end{mdframed}
-
-The fundamental theorem of Vassiliev invariants is that it allows us to establish a relationship between knots and chord diagrams, or equivalently, Vassiliev invariants and weight systems. It's not a-priori obvious how Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants} does this, but is apparent in the following equivalent reformulation.
+\begin{definition}
+	The \textbf{associated graded} algebra of a filtered algebra \(A\) is the algebra formed by the direct sum of the succesive quotient by the filtered components of \(A\),
+	\[\gr A = \bigoplus_{m = 0}^{\infty} A_{m} / A_{m + 1}.\]
+	% TODO: Make bialgebra? Maybe?
+\end{definition}
 
 \begin{theorem}[Fundamental theorem]
 	\label{thm:fundamental-theorem-restated}
@@ -828,7 +818,7 @@ The fundamental theorem of Vassiliev invariants is that it allows us to establis
 	\[\bigoplus_{m = 0}^{\infty} \mathcal{A}_{m} \cong \bigoplus_{m = 0}^{\infty} \mathcal{K}_{m} / \mathcal{K}_{m + 1}.\]
 \end{theorem}
 
-The fundamental theorem consists of two parts.
+We can break the fundamental theorem up into two parts.
 
 \begin{center}
 	\begin{tblr}{|Q[c,m]|p{.36\textwidth}|p{.36\textwidth}|}
@@ -842,21 +832,28 @@ The fundamental theorem consists of two parts.
 	\end{tblr}
 \end{center}
 
-The part due to Vassiliev is the easy part.
+It is actually only the second part of this theorem, due to Kontesevich that is equivalent to Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants}. The first part, due to Vassiliev, is additional (so in reality, this `reformulation' is stronger), but considered ``easy'' relative to the second part. If the goal is to describe \(\mathcal{K}\) by \(\mathcal{A}\), it states that the relations in \(\mathcal{A}\), \ref{eq:co4T} and \ref{eq:co1T} are truly compatible with \(\mathcal{K}_{n}/\mathcal{K}_{n + 1}\). Indeed this was the point of Section \ref{sec:integration-and-the-fundamental-theorem}, so most of the work is already done.
+% TODO: Find reference for Vassiliev
+% TODO: Rephrase this as not to call Vassiliev's work ``easy''.
 
 \begin{proofof}{Vassiliev's part of Theorem \ref{thm:fundamental-theorem-restated}}
+	We start with the map \(a \in \mathcal{A}_{m} \to \mathcal{K}_{m} / \mathcal{K}_{m + 1}\). The map is given by choosing a singular knot \(k^{\bullet} \in \singularknots_{m}\) whose chord diagram is \(a\), then resolving it to an element of \(k \in \mathcal{K}_{m}\), and projecting that into the quotient \(\mathcal{K}_{m} / \mathcal{K}_{m + 1}\). This is well-defined since any other \({k^{\bullet}}'\) also has chord diagram \(a\). So by allowing crossing changes in \(\singularknots_{m}\), \(k^{\bullet}\) and \({k^{\bullet}}'\) may be made equivalent. In the presence of \(n\) singular points, the \(\delta\)-images of singular knots in \(\singularknots_{n}\) are in the \(\delta\)-image of \(\singularknots_{n + 1}\), so equivalent in the quotient.
+
 	\begin{mdframed}
-		We start with the map \(a \in \mathcal{A}_{m} \to \mathcal{K}_{m} / \mathcal{K}_{m + 1}\). The map is given by choosing a singular knot in \(\singularknots_{m}\) whose chord diagram is \(a\), then resolving it to an element of \(\mathcal{K}_{m}\), and projecting that into the quotient \(\mathcal{K}_{m} / \mathcal{K}_{m + 1}\).
-
-		Recalling that \(\mathcal{A}_{m} = \mathcal{D}_{m} / \ref{eq:co1T}, \ref{eq:co4T}\), we need to show that the map is well-defined with respect to those relations. Indeed \ref{eq:co1T} is in the kernel, as any singular knot with a \ref{eq:co1T} singular point resolves to a difference of two of the same knots when that singular point is resolved.
-
-		\ref{eq:co4T} is also in the kernel as it comes from a closed singular isotopy in the strata. When resolving such a closed isotopy, things always cancel out.
-
-		Make the argument in the dual case.
+		Insert relevant figures.
 	\end{mdframed}
+
+	Recalling that \(\mathcal{A}_{m} = \mathcal{D}_{m} / \ref{eq:co1T}, \ref{eq:co4T}\), we need to show that the map is well-defined with respect to those relations. Indeed \ref{eq:co1T} is in the kernel, as any singular knot with a \ref{eq:co1T} singular point resolves to a difference of two of the same knots when that singular point is resolved.
+
+	\ref{eq:co4T} is also in the kernel as it comes from a closed singular isotopy in the strata. When resolving such a closed isotopy, things always cancel out.
+
+	\begin{mdframed}
+		Insert figures and make an argument about the dual case.
+	\end{mdframed}
+	\phantom{.}
 \end{proofof}
 
-The part due to Kontsevich is very involved. Kontsevich defined a knot invariant called the Kontsevich integral which is an incredibly fascinating object. We skip many of the details.
+Let's turn to the other part of the fundamental theorem, with the following definition.
 
 \begin{definition}
 	% TODO: Work out the proper way to define completion / degree completion.
@@ -871,10 +868,35 @@ The part due to Kontsevich is very involved. Kontsevich defined a knot invariant
 	\end{mdframed}
 \end{definition}
 
-\begin{theorem}[Kontsevich Integral]
-	There is an invariant of knots, called the Kontsevich integral \(Z: \mathcal{K} \to \widehat{\mathcal{A}}\) with the following property. If \(k \in \mathcal{K}\) such that \(a \in \mathcal{A} \to [k] \in \mathcal{K}_{m} / \mathcal{K}_{m + 1}\), then
-	\[Z(k) = a + \cdots\]
+The part of Theorem \ref{thm:fundamental-theorem-restated} due to Maxim Kontsevich \cite{vassilievs-knot-invariants} is much more involved. Konsevich constructed an integral invariant which proves the fundamental theorem, as well as containing the information of all Vassiliev invariants at the same time. We will not give a detailed exposition of Kontsevich's invariant here, but they abound in the literature, for example \cite{the-fundamental-theorem-of-vassiliev-invariants, the-kontsevich-integral, introduction-to-vassiliev-invariants} in order of increasing level of detail. Rather we will boil the Kontsevich integral down to the following key property.
+
+\begin{theorem}[Kontsevich]
+	There is an invariant of knots, \(Z: \mathcal{K} \to \widehat{\mathcal{A}}\), called the Kontsevich integral, with the following property. If \(k \in \mathcal{K}_{m}\) is a linear combination of knots with \(k = \delta^{m}(k^{\bullet})\) and \(k^{\bullet}\) has chord diagram \(a\), then
+	\[Z(k) = a + \text{higher degree terms.}\]
 \end{theorem}
+
+\[\star \star \star\] % NOTE: Stuff beyond here is an old version.
+
+\begin{definition}
+	There is a category of filtered algebras and filtration-respecting maps, and there is a category of graded algebras and grading-respecting maps. The \textbf{associated graded} map of a filtration-respecting map \(f: A \to B\) is the grading-respecting map \({\gr f : \gr A \to \gr B}\) defined by taking a representative \(a_{m}\) to \(f(a_{m})\) then projecting onto \(B_{m} / B_{m + 1}\),
+		\[\gr f: a_{m} + A_{m + 1} \mapsto f(a_{m}) + B_{m + 1}.\]
+	This makes \(\gr\) a functor between these two categories.
+	% TODO: Try to typeset the gr f: grA \to gr B inline
+	% TODO: Do I want to define (grading-), filtration-respecting maps? No. But should I? unsure.
+\end{definition}
+
+\begin{mdframed}
+	Part about one direction of the f.t. being easy. Talk about why the other isn't (also how in the dual case it makes it hard to define a map knots to chord diagrams).
+\end{mdframed}
+
+The fundamental theorem of Vassiliev invariants allows us to establish a relationship between knots and chord diagrams, or equivalently, Vassiliev invariants and weight systems. It's not a-priori obvious how Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants} does this, but is apparent in the following equivalent reformulation.
+
+
+
+
+The part due to Kontsevich is very involved. Kontsevich defined a knot invariant called the Kontsevich integral which is an incredibly fascinating object. We skip many of the details.
+
+
 
 \begin{remark}
 	\begin{mdframed}
