FTVI Kontsevich proof sketch and fix asc. filt. indices

--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -804,15 +804,18 @@ Again, this is not, a-priori, a well-defined operation, as the location of the c
 In Section \ref{sec:integration-and-the-fundamental-theorem}, we gave the fundamental theorem of Vassiliev invariants. The point of this theorem is that is establishes a particular relationship between the algebras of the previous two chapters, \(\mathcal{K}\) and \(\mathcal{A}\) (or equivalently, between \(\mathcal{W}\) and \(\mathcal{V}\)). But admittedly, in the form of Theorem \ref{thm:fundamental-theorem-of-vassiliev-invariants}, it's not a-priori obvious why this is the case. Here we give a restatement of that theorem that makes the relationship explicit.
 
 \begin{definition}
-	The \textbf{associated graded} algebra of a filtered algebra \(A\) is the algebra formed by the direct sum of the succesive quotient by the filtered components of \(A\),
-	\[\gr A = \bigoplus_{m = 0}^{\infty} A_{m} / A_{m + 1}.\]
+	The \textbf{associated graded} algebra of a filtered algebra \(A\) is the algebra formed by the direct sum of the succesive quotient by the filtered components of \(A\). For an algebra with a descending filtration,
+	\[\gr A = \bigoplus_{m = 0}^{\infty} A_{m} / A_{m + 1},\]
+	and for an algebra with an ascending filtration,
+	\[\gr A = \bigoplus_{m = 0}^{\infty} A_{m} / A_{m - 1},\]
+	where \(A_{-1} = \{0\}\).
 	% TODO: Make bialgebra? Maybe?
 \end{definition}
 
 \begin{theorem}[Fundamental theorem]
 	\label{thm:fundamental-theorem-restated}
 	The algebra of weight systems is isomorphic to the associated graded algebra of the algebra of Vassiliev invariants, \(\mathcal{W} \cong \gr \mathcal{V}\), or on the level of graded components,
-	\[\bigoplus_{m = 0}^{\infty} \mathcal{W}_{m} \cong \bigoplus_{m = 0}^{\infty} \mathcal{V}_{m} / \mathcal{V}_{m + 1}.\]
+	\[\bigoplus_{m = 0}^{\infty} \mathcal{W}_{m} \cong \bigoplus_{m = 0}^{\infty} \mathcal{V}_{m} / \mathcal{V}_{m - 1}.\]
 
 	Equivalently, it can be stated in the dual setting as follows. The algebra of chord diagrams is isomorphic to the associated graded algebra of the algebra of knots, \(\mathcal{A} \cong \gr \mathcal{K}\), or on the level of graded components,
 	\[\bigoplus_{m = 0}^{\infty} \mathcal{A}_{m} \cong \bigoplus_{m = 0}^{\infty} \mathcal{K}_{m} / \mathcal{K}_{m + 1}.\]
@@ -824,10 +827,10 @@ We can break the fundamental theorem up into two parts.
 	\begin{tblr}{|Q[c,m]|p{.36\textwidth}|p{.36\textwidth}|}
 		\hline
 		\textbf{Vassiliev}
-		& Every Vassiliev invariant modulo Vassiliev invariants of higher order gives a Weight system, so a map \[\mathcal{V}_{m} / \mathcal{V}_{m + 1} \to \mathcal{W}_{m}.\]
+		& Every Vassiliev invariant modulo Vassiliev invariants of higher order gives a Weight system, so a map \[\mathcal{V}_{m} / \mathcal{V}_{m - 1} \to \mathcal{W}_{m}.\]
 		& Every chord diagram gives an element of \(\mathcal{K}_{m}\) modulo \(\mathcal{K}_{m + 1}\), so a map \[\mathcal{A}_{m} \to \mathcal{K}_{m} / \mathcal{K}_{m + 1}.\] \\ \hline
 		\textbf{Kontsevich}
-		& Every weight system gives a Vassiliev invariant modulo Vassiliev invariants of higher order, so a map \[\mathcal{W}_{m} \to \mathcal{V}_{m} / \mathcal{V}_{m + 1}\] which is inverse to the above.
+		& Every weight system gives a Vassiliev invariant modulo Vassiliev invariants of higher order, so a map \[\mathcal{W}_{m} \to \mathcal{V}_{m} / \mathcal{V}_{m - 1}\] which is inverse to the above.
 		& Every equivalence class of \(\mathcal{K}_{m}\) modulo \(\mathcal{K}_{m + 1}\) gives a chord diagram, so a map \[\mathcal{K}_{m} / \mathcal{K}_{m + 1} \to \mathcal{A}_{m}.\] which is inverse to the above. \\ \hline
 	\end{tblr}
 \end{center}
@@ -836,8 +839,8 @@ It is actually only the second part of this theorem, due to Kontesevich that is 
 % TODO: Find reference for Vassiliev
 % TODO: Rephrase this as not to call Vassiliev's work ``easy''.
 
-\begin{proofof}{Vassiliev's part of Theorem \ref{thm:fundamental-theorem-restated}}
-	We start with the map \(a \in \mathcal{A}_{m} \to \mathcal{K}_{m} / \mathcal{K}_{m + 1}\). The map is given by choosing a singular knot \(k^{\bullet} \in \singularknots_{m}\) whose chord diagram is \(a\), then resolving it to an element of \(k \in \mathcal{K}_{m}\), and projecting that into the quotient \(\mathcal{K}_{m} / \mathcal{K}_{m + 1}\). This is well-defined since any other \({k^{\bullet}}'\) also has chord diagram \(a\). So by allowing crossing changes in \(\singularknots_{m}\), \(k^{\bullet}\) and \({k^{\bullet}}'\) may be made equivalent. In the presence of \(n\) singular points, the \(\delta\)-images of singular knots in \(\singularknots_{n}\) are in the \(\delta\)-image of \(\singularknots_{n + 1}\), so equivalent in the quotient.
+\begin{proofof}{Theorem \ref{thm:fundamental-theorem-restated} (Vassiliev)}
+	We start by defining the map \(a \in \mathcal{A}_{m} \to \mathcal{K}_{m} / \mathcal{K}_{m + 1}\). The map is given by choosing a singular knot \(k^{\bullet} \in \singularknots_{m}\) whose chord diagram is \(a\), then resolving it to an element of \(k \in \mathcal{K}_{m}\), and projecting that into the quotient \(\mathcal{K}_{m} / \mathcal{K}_{m + 1}\). This is well-defined since any other \({k^{\bullet}}'\) also has chord diagram \(a\). So by allowing crossing changes in \(\singularknots_{m}\), \(k^{\bullet}\) and \({k^{\bullet}}'\) may be made equivalent. In the presence of \(n\) singular points, the \(\delta\)-images of singular knots in \(\singularknots_{n}\) are in the \(\delta\)-image of \(\singularknots_{n + 1}\), so equivalent in the quotient.
 
 	\begin{mdframed}
 		Insert relevant figures.
@@ -871,9 +874,18 @@ Let's turn to the other part of the fundamental theorem, with the following defi
 The part of Theorem \ref{thm:fundamental-theorem-restated} due to Maxim Kontsevich \cite{vassilievs-knot-invariants} is much more involved. Konsevich constructed an integral invariant which proves the fundamental theorem, as well as containing the information of all Vassiliev invariants at the same time. We will not give a detailed exposition of Kontsevich's invariant here, but they abound in the literature, for example \cite{the-fundamental-theorem-of-vassiliev-invariants, the-kontsevich-integral, introduction-to-vassiliev-invariants} in order of increasing level of detail. Rather we will boil the Kontsevich integral down to the following key property.
 
 \begin{theorem}[Kontsevich]
-	There is an invariant of knots, \(Z: \mathcal{K} \to \widehat{\mathcal{A}}\), called the Kontsevich integral, with the following property. If \(k \in \mathcal{K}_{m}\) is a linear combination of knots with \(k = \delta^{m}(k^{\bullet})\) and \(k^{\bullet}\) has chord diagram \(a\), then
+	\label{thm:kontsevich-integral-degree-property}
+	There is an invariant of knots, \(Z: \mathcal{K} \to \widehat{\mathcal{A}}\), called the Kontsevich integral, with the following property. If \(k \in \mathcal{K}_{m}\) is a linear combination of knots with \(k = \delta^{m}(k^{\bullet})\) and \(k^{\bullet}\) has chord diagram \(a \in \mathcal{A}_{m}\), then
 	\[Z(k) = a + \text{higher degree terms.}\]
 \end{theorem}
+
+\begin{proofof}{Theorem \ref{thm:fundamental-theorem-restated} (Kontsevich)}
+	Take the map \(k \in \mathcal{K}_{m} \to \mathcal{A}_{m}\) coming from killing the higher degree terms in the Kontsevich integral, and taking the lowest order non-zero chord diagram. This factors through the quotient to a map \(\mathcal{K}_{m}/\mathcal{K}_{m + 1} \to \mathcal{A}_{m}\) since by Theorem \ref{thm:kontsevich-integral-degree-property}, any additional \(k' \in \mathcal{K}_{m + 1}\) contributes only higher degree terms, which get killed. It is easy to see that the two maps are inverses.
+
+	\begin{mdframed}
+		Make argument about the dual case, which is taking the kontsevich integral then composing with a weight system gives a Vassiliev invariant.
+	\end{mdframed}
+\end{proofof}
 
 \[\star \star \star\] % NOTE: Stuff beyond here is an old version.
 
